Fixed issue with stretching in Chrome.
I disabled forcing the width of an image to fit 100% in its container.

--- a/css/custom.css
+++ b/css/custom.css
@@ -55,7 +55,6 @@
 .reveal figure.credit img {
     border-style: none;
     box-shadow: 0px 0px;
-    width: 100%;
 }
 
 .reveal section img {
